# shopy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hello.py  main.py  pyproject.toml
src/: central.py  main.py  stability.py
src/shopy/: __init__.py
src/shopy/cmd/: __init__.py  git.py  hash.py  reset.py  shell.py
src/shopy/config/: __init__.py  path_config.py
src/shopy/metrics/: __init__.py  calc.py  store.py
src/shopy/search/: __init__.py  extractfile.py
src/shopy/utils/: __init__.py  get_name.py  json.py  path.py
tests/shopy/utils/: test_json.py
